# ICG_ROS2

./: .gitignore  CMakeLists.txt  README.md  analysis.py  compute_transformation.ipynb  tracker.cpp
aruco/ros2_aruco/config/: aruco_parameters.yaml
aruco/ros2_aruco/ros2_aruco/: aruco_node-bak.py  aruco_node.py
config/: cube_detector.yaml  cube_manual_detector.yaml  icg_test_node.yaml
config/triangle/: config-bak.yaml  cube.yaml
icg/: CMakeLists.txt  package.xml
icg/config/: config.yaml  cube.yaml  cube1_detector.yaml  cube2.yaml  cube2_detector.yaml  cube_detector.yaml  icg_test_node.yaml
icg/config/bak/: cube.yaml  cube_detector.yaml  icg_test_node.yaml
icg/launch/: icg_eyetohand_launch.py
icg/src/: icg_eyeinhand.cpp  icg_eyetohand.cpp  icg_test_node.cpp  pose_subscriber.py
icg/src/icg/: manual_detector.cpp  region_model.cpp
icg/src/icg_ros/: icg_ros_interface.cpp  ros_camera.cpp
icg_msgs/: CMakeLists.txt  package.xml
icg_ros2/: compute_transformation.ipynb  visual.ipynb
icg_ros2/icg/: CMakeLists.txt  package.xml
icg_ros2/icg/config/: config.yaml  cube1.yaml  cube1_detector.yaml  cube2.yaml  cube2_detector.yaml  cube3.yaml  cube3_detector.yaml
icg_ros2/icg/include/icg_ros/: icg_ros_interface.h  ros_camera.h
icg_ros2/icg/launch/: icg_eyeinhand_launch.py
icg_ros2/icg/src/: icg_eyeinhand.cpp  icg_eyetohand.cpp
icg_ros2/icg/src/icg/: depth_model.cpp  model.cpp  optimizer.cpp  renderer.cpp
icg_ros2/icg/src/icg_ros/: icg_ros_interface.cpp
icg_ros2/icg_msgs/: CMakeLists.txt
icg_ros2/pose_subscriber/: package.xml  setup.cfg
icg_ros2/pose_subscriber/pose_subscriber/: __init__.py  data_pick_aruco.npz  data_place_aruco.npz
launch/: icg_test_node_launch.py
pose_subscriber/: setup.py
pose_subscriber/launch/: pose_subscriber.launch.py
pose_subscriber/pose_subscriber/: __init__.py  poses.npz  subscriber_node.py  test.ipynb
ros2_aruco/: package.xml
ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/launch/: aruco_recognition.launch.py
ros2_aruco/ros2_aruco/: aruco_node copy.py  aruco_node-modified-single.py  aruco_node.py
src/: icg_test_node.cpp
src/icg/: depth_modality.cpp  depth_model.cpp  model.cpp  normal_renderer.cpp  region_modality.cpp  region_model.cpp  renderer.cpp  tracker.cpp
src/icg_ros/: icg_ros_interface.cpp  ros_camera.cpp
