<?xml version="1.0"?>
<package format="3">
  <name>icg_ros</name>
  <version>0.0.1</version>
  <description>The icg ros2 package</description>

  <maintainer email="zhongruirui.zju@gmail.com">Ruirui</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>icg_msgs</depend>
 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>